# AudioAndTextBasedSpeakerChangeDetection

./: CITATION.cff  README.md  pyproject.toml
examples/: bvyvm-existing-llama.py  bvyvm.py
models/pyannote3.1/Diarization/: config.yaml
models/pyannote3.1/Segmentation/: config.yaml
sample_data/: sample_data.csv
src/: sample_run.py
src/SpeakerChangeDetection/Llama2/huggingface_offline/: LLaMA_HuggingFace_Offline.py
src/audiotextspeakerchangedetect/: main.py  run_ensemble_audio_text_based_speaker_change_detection.py  sample_run.py  sample_run_existingllama2output.py
src/audiotextspeakerchangedetect/EnsembleSpeakerChangeDetection/: ensemble_detection.py  helpers.py
src/audiotextspeakerchangedetect/Evaluation/: 01_parse_rttm_to_csv.py  02_run_detection_metrics_function.py
src/audiotextspeakerchangedetect/Evaluation/SpeakerChangeDetection/: metrics_main_function.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/: helpers.py  speaker_change_detection_main_function.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/Llama2/: speaker_change_detection_llama2.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/Llama2/huggingface_offline/: LLaMA_HuggingFace_Offline.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/Llama2/prompts/: generators.py  template.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/NLP/: speaker_change_detection_nlp.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/PyAnnote/: speaker_change_detection_pyannote.py
src/audiotextspeakerchangedetect/SpeakerChangeDetection/SpectralClustering/: speaker_change_detection_clustering.py
src/audiotextspeakerchangedetect/tests/: conftest.py  test_ensemble_detection.py  test_speaker_change_detection_main_function.py
src/audiotextspeakerchangedetect/tests/inputs/: sample_data_short.csv  sample_data_short_ensemble.csv
src/audiotextspeakerchangedetect/tests/outputs/: sample_data_short.csv  sample_data_short_ensemble.csv
