[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"] # From which folder we start to build packages

[project]
name = "textbasedspeakerchangedetection"
version = "1.0.0" # Set version as fixed
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
description = "A package to detect speaker change based on textual features via LLMs and Rule-Based NLP"
readme = "README.md"
requires-python = ">=3.7" # The error would occurs when users install this package on python versions below 3.7
classifiers = [ # Show basic information of packages
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[ # Would automatically install these three packages when we build and install our package using pip install -e .
    "torch", #for specific package version: numpy==1.2.62, numpy>=1.2.62
    "huggingface_hub",
    "spacy"
]

[project.urls] # Helpful Links Related to Package
"Homepage" = "https://github.com/princeton-ddss/TextBasedSpeakerChangeDetection"

