[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] # From which folder we start to build packages

[project]
name = "audiotextspeakerchangedetect"
version = "1.0.0" # Set version as fixed
authors = [
  { name="Junying (Alice) Fang", email="jf3375@princeton.edu" },
]
description = "A package to detect speaker change based on textual features via LLMs and Rule-Based NLP"
readme = "README.md"
requires-python = ">=3.7" # The error would occurs when users install this package on python versions below 3.7
classifiers = [ # Show basic information of packages
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies=[ # Would automatically install these three packages when we build and install our package using pip install -e .
    "accelerate",
    "torch",
    "torchvision",
    "huggingface_hub",
    "spacy",
    "resemblyzer",
    "spectralcluster",
    "transformers",
    "pyannote.audio==3.1.1",
    "pyannote.core==5.0.0",
    "pyannote.database==5.0.1",
    "pyannote.metrics==3.2.1",
    "pyannote.pipeline==3.0.1"
]

[project.urls] # Helpful Links Related to Package
"Homepage" = "https://github.com/princeton-ddss/AudioAndTextBasedSpeakerChangeDetection"

